--- a/Regressão Lasso.ipynb
+++ b/Regressão Lasso.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2010,7 +2010,7 @@
        "4   0.674  "
       ]
      },
-     "execution_count": 162,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2022,7 +2022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2032,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2047,7 +2047,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2058,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2067,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2076,7 +2076,7 @@
        "5565"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2087,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2185,7 +2185,7 @@
        "14                  4.72                      0.712  "
       ]
      },
-     "execution_count": 167,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2196,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2219,7 +2219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2228,7 +2228,7 @@
        "<AxesSubplot:xlabel='expectativa_vida'>"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2251,7 +2251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2350,7 +2350,7 @@
        "indice_frequencia_escolar                   1.000000  "
       ]
      },
-     "execution_count": 170,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2364,7 +2364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2375,7 +2375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2385,7 +2385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2402,19 +2402,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\gcabr\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n",
       "C:\\Users\\gcabr\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -2432,7 +2426,13 @@
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  after removing the cwd from sys.path.\n"
+      "  after removing the cwd from sys.path.\n",
+      "C:\\Users\\gcabr\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \"\"\"\n"
      ]
     }
    ],
@@ -2446,7 +2446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2456,7 +2456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2482,7 +2482,7 @@
        "             verbose=0)"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2496,7 +2496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2516,7 +2516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2527,7 +2527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2588,10 +2588,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.003079</td>\n",
-       "      <td>0.000526</td>\n",
-       "      <td>0.001803</td>\n",
-       "      <td>0.000395</td>\n",
+       "      <td>0.002930</td>\n",
+       "      <td>0.000476</td>\n",
+       "      <td>0.001512</td>\n",
+       "      <td>0.000509</td>\n",
        "      <td>0.01</td>\n",
        "      <td>{'alpha': 0.01}</td>\n",
        "      <td>0.616533</td>\n",
@@ -2623,10 +2623,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.002519</td>\n",
-       "      <td>0.000538</td>\n",
-       "      <td>0.001813</td>\n",
-       "      <td>0.000399</td>\n",
+       "      <td>0.002987</td>\n",
+       "      <td>0.000113</td>\n",
+       "      <td>0.001803</td>\n",
+       "      <td>0.000403</td>\n",
        "      <td>0.02</td>\n",
        "      <td>{'alpha': 0.02}</td>\n",
        "      <td>0.615277</td>\n",
@@ -2658,10 +2658,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.002629</td>\n",
-       "      <td>0.000534</td>\n",
-       "      <td>0.001799</td>\n",
-       "      <td>0.000384</td>\n",
+       "      <td>0.002802</td>\n",
+       "      <td>0.000404</td>\n",
+       "      <td>0.001695</td>\n",
+       "      <td>0.000457</td>\n",
        "      <td>0.03</td>\n",
        "      <td>{'alpha': 0.03}</td>\n",
        "      <td>0.613620</td>\n",
@@ -2693,10 +2693,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.002603</td>\n",
+       "      <td>0.002614</td>\n",
        "      <td>0.000432</td>\n",
-       "      <td>0.001600</td>\n",
-       "      <td>0.000485</td>\n",
+       "      <td>0.001699</td>\n",
+       "      <td>0.000453</td>\n",
        "      <td>0.04</td>\n",
        "      <td>{'alpha': 0.04}</td>\n",
        "      <td>0.611566</td>\n",
@@ -2728,10 +2728,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.002552</td>\n",
-       "      <td>0.000425</td>\n",
-       "      <td>0.001611</td>\n",
-       "      <td>0.000479</td>\n",
+       "      <td>0.002840</td>\n",
+       "      <td>0.000297</td>\n",
+       "      <td>0.001724</td>\n",
+       "      <td>0.000452</td>\n",
        "      <td>0.05</td>\n",
        "      <td>{'alpha': 0.05}</td>\n",
        "      <td>0.609114</td>\n",
@@ -2798,10 +2798,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>494</th>\n",
-       "      <td>0.002777</td>\n",
-       "      <td>0.000391</td>\n",
-       "      <td>0.001933</td>\n",
-       "      <td>0.000319</td>\n",
+       "      <td>0.002900</td>\n",
+       "      <td>0.000700</td>\n",
+       "      <td>0.001802</td>\n",
+       "      <td>0.000394</td>\n",
        "      <td>4.95</td>\n",
        "      <td>{'alpha': 4.95}</td>\n",
        "      <td>-0.000403</td>\n",
@@ -2833,10 +2833,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>495</th>\n",
-       "      <td>0.002480</td>\n",
-       "      <td>0.000503</td>\n",
-       "      <td>0.001895</td>\n",
-       "      <td>0.000299</td>\n",
+       "      <td>0.002597</td>\n",
+       "      <td>0.000425</td>\n",
+       "      <td>0.001609</td>\n",
+       "      <td>0.000470</td>\n",
        "      <td>4.96</td>\n",
        "      <td>{'alpha': 4.96}</td>\n",
        "      <td>-0.000403</td>\n",
@@ -2868,10 +2868,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>496</th>\n",
-       "      <td>0.002795</td>\n",
-       "      <td>0.000399</td>\n",
-       "      <td>0.001895</td>\n",
-       "      <td>0.000299</td>\n",
+       "      <td>0.002574</td>\n",
+       "      <td>0.000413</td>\n",
+       "      <td>0.001617</td>\n",
+       "      <td>0.000482</td>\n",
        "      <td>4.97</td>\n",
        "      <td>{'alpha': 4.97}</td>\n",
        "      <td>-0.000403</td>\n",
@@ -2903,10 +2903,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>497</th>\n",
-       "      <td>0.002602</td>\n",
-       "      <td>0.000487</td>\n",
-       "      <td>0.001988</td>\n",
-       "      <td>0.000016</td>\n",
+       "      <td>0.002499</td>\n",
+       "      <td>0.000450</td>\n",
+       "      <td>0.001701</td>\n",
+       "      <td>0.000443</td>\n",
        "      <td>4.98</td>\n",
        "      <td>{'alpha': 4.9799999999999995}</td>\n",
        "      <td>-0.000403</td>\n",
@@ -2938,10 +2938,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>498</th>\n",
-       "      <td>0.002385</td>\n",
-       "      <td>0.000494</td>\n",
-       "      <td>0.002015</td>\n",
-       "      <td>0.000048</td>\n",
+       "      <td>0.002495</td>\n",
+       "      <td>0.000487</td>\n",
+       "      <td>0.001997</td>\n",
+       "      <td>0.000432</td>\n",
        "      <td>4.99</td>\n",
        "      <td>{'alpha': 4.99}</td>\n",
        "      <td>-0.000403</td>\n",
@@ -2978,17 +2978,17 @@
       ],
       "text/plain": [
        "     mean_fit_time  std_fit_time  mean_score_time  std_score_time param_alpha  \\\n",
-       "0         0.003079      0.000526         0.001803        0.000395        0.01   \n",
-       "1         0.002519      0.000538         0.001813        0.000399        0.02   \n",
-       "2         0.002629      0.000534         0.001799        0.000384        0.03   \n",
-       "3         0.002603      0.000432         0.001600        0.000485        0.04   \n",
-       "4         0.002552      0.000425         0.001611        0.000479        0.05   \n",
+       "0         0.002930      0.000476         0.001512        0.000509        0.01   \n",
+       "1         0.002987      0.000113         0.001803        0.000403        0.02   \n",
+       "2         0.002802      0.000404         0.001695        0.000457        0.03   \n",
+       "3         0.002614      0.000432         0.001699        0.000453        0.04   \n",
+       "4         0.002840      0.000297         0.001724        0.000452        0.05   \n",
        "..             ...           ...              ...             ...         ...   \n",
-       "494       0.002777      0.000391         0.001933        0.000319        4.95   \n",
-       "495       0.002480      0.000503         0.001895        0.000299        4.96   \n",
-       "496       0.002795      0.000399         0.001895        0.000299        4.97   \n",
-       "497       0.002602      0.000487         0.001988        0.000016        4.98   \n",
-       "498       0.002385      0.000494         0.002015        0.000048        4.99   \n",
+       "494       0.002900      0.000700         0.001802        0.000394        4.95   \n",
+       "495       0.002597      0.000425         0.001609        0.000470        4.96   \n",
+       "496       0.002574      0.000413         0.001617        0.000482        4.97   \n",
+       "497       0.002499      0.000450         0.001701        0.000443        4.98   \n",
+       "498       0.002495      0.000487         0.001997        0.000432        4.99   \n",
        "\n",
        "                            params  split0_test_R2  split1_test_R2  \\\n",
        "0                  {'alpha': 0.01}        0.616533        0.649742   \n",
@@ -3123,7 +3123,7 @@
        "[499 rows x 32 columns]"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3135,7 +3135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -3168,7 +3168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3203,7 +3203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3221,7 +3221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3313,7 +3313,7 @@
        "4             0.556439  "
       ]
      },
-     "execution_count": 183,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3324,7 +3324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3369,7 +3369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3378,7 +3378,7 @@
        "array([-0.246326  ,  0.42265566, -1.88922227,  0.75951309])"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3392,7 +3392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3436,7 +3436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -3459,7 +3459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3478,7 +3478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3487,7 +3487,7 @@
        "array([71.13021908])"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3495,13 +3495,6 @@
    "source": [
     "novas_previsoes"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
