--- a/Modelos de Árvores.ipynb
+++ b/Modelos de Árvores.ipynb
@@ -14,8 +14,8 @@
       "Requirement already satisfied: pyparsing>=2.1.4 in c:\\users\\gcabr\\anaconda3\\lib\\site-packages (from pydot) (2.4.7)\n",
       "Requirement already satisfied: scikit-learn==0.22 in c:\\users\\gcabr\\anaconda3\\lib\\site-packages (0.22)\n",
       "Requirement already satisfied: joblib>=0.11 in c:\\users\\gcabr\\anaconda3\\lib\\site-packages (from scikit-learn==0.22) (1.0.0)\n",
-      "Requirement already satisfied: scipy>=0.17.0 in c:\\users\\gcabr\\anaconda3\\lib\\site-packages (from scikit-learn==0.22) (1.6.0)\n",
-      "Requirement already satisfied: numpy>=1.11.0 in c:\\users\\gcabr\\anaconda3\\lib\\site-packages (from scikit-learn==0.22) (1.19.2)\n"
+      "Requirement already satisfied: numpy>=1.11.0 in c:\\users\\gcabr\\anaconda3\\lib\\site-packages (from scikit-learn==0.22) (1.19.2)\n",
+      "Requirement already satisfied: scipy>=0.17.0 in c:\\users\\gcabr\\anaconda3\\lib\\site-packages (from scikit-learn==0.22) (1.6.0)\n"
      ]
     }
    ],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2544,7 +2544,7 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x2e7569fd5c0>"
+       "<graphviz.files.Source at 0x260ae3bf7b8>"
       ]
      },
      "execution_count": 27,
@@ -2798,10 +2798,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>63.976807</td>\n",
-       "      <td>4.117506</td>\n",
-       "      <td>1.383299</td>\n",
-       "      <td>0.635678</td>\n",
+       "      <td>153.595507</td>\n",
+       "      <td>4.167754</td>\n",
+       "      <td>1.654378</td>\n",
+       "      <td>0.697306</td>\n",
        "      <td>gini</td>\n",
        "      <td>2</td>\n",
        "      <td>{'criterion': 'gini', 'max_depth': 2}</td>\n",
@@ -2834,10 +2834,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>41.492799</td>\n",
-       "      <td>16.593197</td>\n",
-       "      <td>1.427181</td>\n",
-       "      <td>0.829254</td>\n",
+       "      <td>59.559764</td>\n",
+       "      <td>51.697951</td>\n",
+       "      <td>2.560467</td>\n",
+       "      <td>1.863576</td>\n",
        "      <td>gini</td>\n",
        "      <td>3</td>\n",
        "      <td>{'criterion': 'gini', 'max_depth': 3}</td>\n",
@@ -2870,10 +2870,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>41.247240</td>\n",
-       "      <td>1.086701</td>\n",
-       "      <td>1.157703</td>\n",
-       "      <td>0.172963</td>\n",
+       "      <td>43.230296</td>\n",
+       "      <td>4.641145</td>\n",
+       "      <td>1.378009</td>\n",
+       "      <td>0.496010</td>\n",
        "      <td>gini</td>\n",
        "      <td>4</td>\n",
        "      <td>{'criterion': 'gini', 'max_depth': 4}</td>\n",
@@ -2906,10 +2906,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>48.790856</td>\n",
-       "      <td>1.284127</td>\n",
-       "      <td>1.024359</td>\n",
-       "      <td>0.050795</td>\n",
+       "      <td>48.990791</td>\n",
+       "      <td>2.858456</td>\n",
+       "      <td>1.643900</td>\n",
+       "      <td>0.353881</td>\n",
        "      <td>gini</td>\n",
        "      <td>5</td>\n",
        "      <td>{'criterion': 'gini', 'max_depth': 5}</td>\n",
@@ -2942,10 +2942,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>55.118327</td>\n",
-       "      <td>0.766540</td>\n",
-       "      <td>1.070336</td>\n",
-       "      <td>0.078729</td>\n",
+       "      <td>58.061650</td>\n",
+       "      <td>5.680202</td>\n",
+       "      <td>1.415806</td>\n",
+       "      <td>0.247279</td>\n",
        "      <td>gini</td>\n",
        "      <td>6</td>\n",
        "      <td>{'criterion': 'gini', 'max_depth': 6}</td>\n",
@@ -2982,11 +2982,11 @@
       ],
       "text/plain": [
        "   mean_fit_time  std_fit_time  mean_score_time  std_score_time  \\\n",
-       "0      63.976807      4.117506         1.383299        0.635678   \n",
-       "1      41.492799     16.593197         1.427181        0.829254   \n",
-       "2      41.247240      1.086701         1.157703        0.172963   \n",
-       "3      48.790856      1.284127         1.024359        0.050795   \n",
-       "4      55.118327      0.766540         1.070336        0.078729   \n",
+       "0     153.595507      4.167754         1.654378        0.697306   \n",
+       "1      59.559764     51.697951         2.560467        1.863576   \n",
+       "2      43.230296      4.641145         1.378009        0.496010   \n",
+       "3      48.990791      2.858456         1.643900        0.353881   \n",
+       "4      58.061650      5.680202         1.415806        0.247279   \n",
        "\n",
        "  param_criterion param_max_depth                                 params  \\\n",
        "0            gini               2  {'criterion': 'gini', 'max_depth': 2}   \n",
@@ -3104,7 +3104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3113,7 +3113,7 @@
        "0.36124715345685504"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3126,7 +3126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3137,7 +3137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3162,7 +3162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3198,16 +3198,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2e7d5159b38>"
+       "<matplotlib.legend.Legend at 0x26255137748>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3243,7 +3243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3269,7 +3269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3279,7 +3279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -3288,7 +3288,7 @@
        "(733790, 166159, 88263, 124918)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3302,7 +3302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -3675,10 +3675,10 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x2e7e240fcc0>"
+       "<graphviz.files.Source at 0x26255103be0>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3694,16 +3694,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q006 0.8717585183740633\n",
+      "Cor_Raca_Branca 0.028708688031829917\n",
+      "Acesso_internet_Não 0.028623125534249633\n",
+      "Escola_Pública 0.027811505973792797\n",
+      "Escola_Privada 0.023861957359522904\n",
+      "Escola_Não_respondeu 0.008887855100188148\n",
+      "Acesso_internet_Sim 0.0035174431553847228\n",
+      "Mora_com_1_pessoas 0.003289834763937028\n",
+      "MG 0.002931256063657295\n",
+      "Cor_Raca_Não_informado 0.0003250193127190739\n",
+      "AL 0.00014263752533373204\n",
+      "MT 6.490255625843281e-05\n",
+      "ES 5.495454068130224e-05\n",
+      "Mora_com_4_pessoas 1.1252413587534165e-05\n",
+      "Mora_com_8_pessoas 7.777601792608918e-06\n",
+      "Cor_Raca_Indígena 3.271693001533244e-06\n",
+      "PE 0.0\n",
+      "PB 0.0\n",
+      "PA 0.0\n",
+      "MS 0.0\n",
+      "MA 0.0\n",
+      "GO 0.0\n",
+      "BA 0.0\n",
+      "DF 0.0\n",
+      "CE 0.0\n",
+      "PR 0.0\n",
+      "AP 0.0\n",
+      "AM 0.0\n",
+      "AC 0.0\n",
+      "Cor_Raca_Preta 0.0\n",
+      "Cor_Raca_Parda 0.0\n",
+      "Mora_com_9_pessoas 0.0\n",
+      "Cor_Raca_Amarela 0.0\n",
+      "PI 0.0\n",
+      "RJ 0.0\n",
+      "Mora_com_3_pessoas 0.0\n",
+      "RN 0.0\n",
+      "Mora_com_2_pessoas 0.0\n",
+      "Mora_com_20_pessoas 0.0\n",
+      "Mora_com_19_pessoas 0.0\n",
+      "Mora_com_18_pessoas 0.0\n",
+      "Mora_com_17_pessoas 0.0\n",
+      "Mora_com_16_pessoas 0.0\n",
+      "Mora_com_15_pessoas 0.0\n",
+      "Mora_com_14_pessoas 0.0\n",
+      "Mora_com_13_pessoas 0.0\n",
+      "Mora_com_12_pessoas 0.0\n",
+      "Mora_com_11_pessoas 0.0\n",
+      "Mora_com_10_pessoas 0.0\n",
+      "Mora_com_5_pessoas 0.0\n",
+      "Mora_com_6_pessoas 0.0\n",
+      "Mora_com_7_pessoas 0.0\n",
+      "TO 0.0\n",
+      "SP 0.0\n",
+      "SE 0.0\n",
+      "SC 0.0\n",
+      "RR 0.0\n",
+      "RO 0.0\n",
+      "RS 0.0\n"
+     ]
+    }
+   ],
    "source": [
+    "# Verificando a importância das variáveis no modelo\n",
+    "# Observa-se que renda, cor, internet e tipo de escola são as principais variáveis\n",
     "importancias = clf.best_estimator_.feature_importances_\n",
     "ordem = np.argsort(importancias)[::-1]\n",
     "colunas = X_train.columns\n",
     "\n",
     "for coluna,importancia in zip(colunas[ordem],importancias[ordem]):\n",
     "    print(coluna,importancia)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Verificando se o modelo possui algum viés\n",
+    "    * Analisa-se o desempenho do modelo é similar a depender do perfil da observação\n",
+    "     * Verifica-se se o modelo perfoma conforme o indivíduo ser ou não da cor branca, e possui ou não internet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predição do modelo para individuos da cor branca ou não\n",
+    "y_score_1 = clf.predict_proba(X_test[X_test['Cor_Raca_Branca']==1])[:,1]\n",
+    "y_score_0 = clf.predict_proba(X_test[X_test['Cor_Raca_Branca']==0])[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC_AUC_SCORE:  0.7476095190288152\n",
+      "ROC_AUC_SCORE:  0.7490519036300088\n"
+     ]
+    }
+   ],
+   "source": [
+    "# AUC Score são parecidos, indicando, a principio, nao haver vies\n",
+    "print('ROC_AUC_SCORE: ', roc_auc_score(y_test[X_test['Cor_Raca_Branca']==1], y_score_1))\n",
+    "print('ROC_AUC_SCORE: ', roc_auc_score(y_test[X_test['Cor_Raca_Branca']==0], y_score_0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predição do modelo para individuos sem acesso a internet ou não\n",
+    "y_score_1 = clf.predict_proba(X_test[X_test['Acesso_internet_Não']==1])[:,1]\n",
+    "y_score_0 = clf.predict_proba(X_test[X_test['Acesso_internet_Não']==0])[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC_AUC_SCORE:  0.6626902134551428\n",
+      "ROC_AUC_SCORE:  0.7519001484904181\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Modelo perfoma pior para individuos sem acesso a internet\n",
+    "print('ROC_AUC_SCORE: ', roc_auc_score(y_test[X_test['Acesso_internet_Não']==1], y_score_1))\n",
+    "print('ROC_AUC_SCORE: ', roc_auc_score(y_test[X_test['Acesso_internet_Não']==0], y_score_0))"
    ]
   },
   {
